The report converter is done and now able to convert from 0.8.3f to 0.8.4 cleaned the code

--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -7,13 +7,13 @@
 # Defines, whether the toolbar will be floatable. This is not enabled by
 # default.
 #
-org.jfree.report.modules.gui.base.PreviewBase.ToolbarFloatable=false
+org.jfree.report.modules.gui.base.ToolbarFloatable=false
 
 #
 # Defines, whether the toolbar will contain large icons. This is enabled
 # by default.
 #
-org.jfree.report.modules.gui.base.PreviewBase.LargeIconsEnabled=false
+org.jfree.report.modules.gui.base.LargeIcons=false
 
 #
 # Defines, whether we should translate the standard swing dialogs.
