--- a/jfreereport/source/org/jfree/report/modules/output/csv/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/csv/configuration.properties
@@ -11,4 +11,4 @@ org.jfree.report.modules.output.csv.Separator=,
 # Defines whether to write the column names of the datarow into the
 # first row.
 #
-org.jfree.report.modules.output.csv.write-datarow-names=false
+org.jfree.report.modules.output.csv.WriteDatarowNames=false
