--- a/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
@@ -7,17 +7,21 @@
 #
 # The default font-encoding for the OutputTarget.
 # Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
-#org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.Encoding=Identity-H
+#org.jfree.report.modules.output.pageable.pdf.Encoding=Identity-H
 
 #
 # Defines whether to embed fonts in the generated PDF. This will result in larger PDF
 # files, but makes sure that all characters are displayed properly.
 #
-#org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.EmbedFonts=true
+#org.jfree.report.modules.output.pageable.pdf.EmbedFonts=true
 
 #
 # The author string of the document.
-#org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.Author=user
+#org.jfree.report.modules.output.pageable.pdf.Author=user
+
+#
+# The title of the document.
+#org.jfree.report.modules.output.pageable.pdf.Title=
 
 ###########################################################################################
 ### PDF Security flags are only used with security enabled and a password set #############
@@ -25,39 +29,39 @@
 
 #
 # Should the PDF Security setting allow copying of the document's contents by default
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowCopy=false
+org.jfree.report.modules.output.pageable.pdf.AllowCopy=false
 
 #
 # Should the PDF Security setting allow printing of the document's contents by default
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowPrinting=false
+org.jfree.report.modules.output.pageable.pdf.AllowPrinting=false
 
 #
 # Should the PDF Security setting allow modifying of the document by default
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowModifyContents=false
+org.jfree.report.modules.output.pageable.pdf.AllowModifyContents=false
 
 #
 # Should the PDF Security setting allow document annotations by default
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowModifyAnnotations=false
+org.jfree.report.modules.output.pageable.pdf.AllowModifyAnnotations=false
 
 #
 # Should the PDF Security setting allow the fill-in of document forms (inputfields etc).
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowFillIn=false
+org.jfree.report.modules.output.pageable.pdf.AllowFillIn=false
 
 #
 # Should the PDF Security setting allow access for screenreaders by default
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowScreenReaders=false
+org.jfree.report.modules.output.pageable.pdf.AllowScreenReaders=false
 
 #
 # Should the PDF Security setting allow re(assembly) of the document by default
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowAssembly=false
+org.jfree.report.modules.output.pageable.pdf.AllowAssembly=false
 
 #
 # Should the PDF Security setting allow low quality printing of the document's contents by default
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.AllowDegradedPrinting=false
+org.jfree.report.modules.output.pageable.pdf.AllowDegradedPrinting=false
 
 #
 # Should the PDF file be encrypted by default? Set to "none" "40bit" "128bit"
-org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.Encryption=none
+org.jfree.report.modules.output.pageable.pdf.Encryption=none
 
 ####################################################################################
 # Warning: Specifying passwords in the property file can introduce a security risk.
@@ -66,9 +70,9 @@ org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.Encryption=
 
 #
 # The default user password for the document.
-#org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.userpassword=
+#org.jfree.report.modules.output.pageable.pdf.UserPassword=
 
 #
 # The default owner password for the document.
-#org.jfree.report.modules.output.pageable.pdf.PDFOutputTarget.default.ownerpassword=
+#org.jfree.report.modules.output.pageable.pdf.OwnerPassword=
 
