--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -1,4 +1,25 @@
 #
 # HTML target specific configuration properties ...
+
 #
+# Defines the document encoding. If undefined, it defaults to the
+# platforms default encoding.
 #org.jfree.report.modules.ouput.table.html.Encoding=UTF-8
+
+#
+# Defines whether to define a body fragment only. This removes
+# the header and body tags and makes it easy to include the generated
+# content in own pages.
+#org.jfree.report.modules.ouput.table.html.BodyFragment=UTF-8
+
+#
+# Defines whether to generate XHTML1.0 or HTML4.0 content.
+#org.jfree.report.modules.ouput.table.html.GenerateXHTML=false
+
+#
+# Defines the default title for generated HTML documents.
+#org.jfree.report.modules.ouput.table.html.Title=
+
+#
+# Defines a author for generated HTML documents.
+#org.jfree.report.modules.ouput.table.html.Author=
