--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -22,14 +22,14 @@ org.jfree.report.StrictErrorHandling=true
 # Enable aliasing for Graphics2D. This may result is textlayout errors.
 # If your text is not correctly aligned, disable this property.
 #
-org.jfree.report.layout.FontRenderer.useAliasing=true
+org.jfree.report.layout.fontrenderer.UseAliasing=true
 
 #
 # This is a override setting. Some Graphics2D implementations have problems
 # with the font positioning. I don't know a way to resolve that bug, try
 # setting this property to "true" to resolve wrong/buggy string draw results.
 #
-org.jfree.report.layout.FontRenderer.isBuggyFRC=false
+org.jfree.report.layout.fontrenderer.IsBuggyFRC=false
 
 #
 # Where to log. Give a classname of a  valid LogTarget implementation.
@@ -50,10 +50,6 @@ org.jfree.report.WarnInvalidColumns=true
 # output, no single line of debug information will be printed. If you want to remove
 # System.out-debugging on the server side, try to switch to a Log4J-LogTarget instead.
 org.jfree.report.NoDefaultDebug=false
-
-#
-# Local configuration keys:
-# The following keys can be redefined for all report-instances.
 
 #
 # Defines the known modules. It is not fatal if they are not found.
