--- a/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
@@ -1,7 +1,16 @@
 #
 # Defines the default encoding for plain text files.
+
 #
 # This property defaults to the current platform encoding, but should
 # be adjusted when using one of the printer specifc command sets.
 #
 #org.jfree.report.modules.output.pageable.plaintext.Encoding=Cp1252
+
+#
+# Defines the printer font. Valid values are 6 or 10
+#org.jfree.report.modules.output.pageable.plaintext.LinesPerInch=6
+
+#
+# Defines the printer font. Valid values are 10, 12, 15, 17 or 20
+#org.jfree.report.modules.output.pageable.plaintext.CharsPerInch=10
