--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -7,7 +7,6 @@ org.jfree.report.LogLevel=Debug
 #
 org.jfree.report.ConfigStore=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStorage
 
-
 #
 # Defines a stricter error handling, if set to true, then all errors that
 # occur during the report processing will cause the report processing to fail.
@@ -42,7 +41,8 @@ org.jfree.report.PrintOperationComment=false
 
 #
 # Should the datarow print warning on invalid columns? Invalid column requests always
-# return null, if set to true, an additional logging entry is added
+# return null. If set to true, an additional logging entry is added whenever an
+# invalid column is encountered.
 org.jfree.report.WarnInvalidColumns=true
 
 #
@@ -55,6 +55,7 @@ org.jfree.report.NoDefaultDebug=false
 # Defines the known modules. It is not fatal if they are not found.
 #
 org.jfree.report.modules.gui.base.Module=org.jfree.report.modules.gui.base.PreviewBaseModule
+org.jfree.report.modules.gui.config.Module=org.jfree.report.modules.gui.config.ConfigGUIModule
 org.jfree.report.modules.gui.converter.Module=org.jfree.report.modules.gui.converter.ConverterGUIModule
 org.jfree.report.modules.gui.csv.Module=org.jfree.report.modules.gui.csv.CSVExportGUIModule
 org.jfree.report.modules.gui.html.Module=org.jfree.report.modules.gui.html.HTMLExportGUIModule
