--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.4
+jfreereport.version=0.8.4-pre
 
 #
 # This defines the compiler settings. Optimizing would remove
