Config Editor work, updated property descriptions while writing the editor

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -93,6 +93,7 @@ module-parser-simple-file=${targetdir}${jfreereport.name}-${jfreereport.version}
 
 module-gui-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-base.jar
 module-gui-converter-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-converter.jar
+module-gui-config-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-config.jar
 module-gui-csv-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-csv.jar
 module-gui-html-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-html.jar
 module-gui-pdf-file=${targetdir}${jfreereport.name}-${jfreereport.version}-gui-pdf.jar
