--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -25,8 +25,9 @@ org.jfree.report.layout.fontrenderer.UseAliasing=true
 
 #
 # This is a override setting. Some Graphics2D implementations have problems
-# with the font positioning. I don't know a way to resolve that bug, try
-# setting this property to "true" to resolve wrong/buggy string draw results.
+# with the font positioning. I don't know a way to resolve that bug on the root,
+# so if the bug happens to you, try setting this property to "true" to resolve
+# wrong or buggy string draw results.
 #
 org.jfree.report.layout.fontrenderer.IsBuggyFRC=false
 
@@ -35,14 +36,17 @@ org.jfree.report.layout.fontrenderer.IsBuggyFRC=false
 org.jfree.report.LogTarget=org.jfree.report.util.SystemOutLogTarget
 
 #
-# Should the logical page add comments to the generated PhysicalOperations? This is
-# for debugging only.
+# Defines, whether the page layouter prints a massive amount of debug messages.
+# This is for debugging only, you wouldn't activate this in a production system.
 org.jfree.report.PrintOperationComment=false
 
 #
-# Should the datarow print warning on invalid columns? Invalid column requests always
-# return null. If set to true, an additional logging entry is added whenever an
-# invalid column is encountered.
+# Defines, whether the datarow prints warning on invalid columns. Requests to
+# invalid columns are non fatal, but these messages give usefull hints on invalid
+# report definitions.
+#
+# If set to true, an additional logging entry is added whenever an invalid column
+# is encountered.
 org.jfree.report.WarnInvalidColumns=true
 
 #
