--- a/jfreereport/source/org/jfree/report/modules/gui/config/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/config/configuration.properties
@@ -1,12 +1,12 @@
 #
-#
+# Defines some configuration properties for the config-editor module.
 #
 
 #
-# The font used to display monospaced text ...
+# The font used to display monospaced text in the text areas.
 org.jfree.report.modules.gui.config.EditorFont=Lucida Sans Typewriter
 
 #
-# The font size used to display monospaced text ...
+# The font size used to display monospaced text.
 org.jfree.report.modules.gui.config.EditorFontSize=15
 
