--- a/jfreereport/source/org/jfree/report/modules/gui/xls/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/xls/configuration.properties
@@ -3,10 +3,9 @@
 #
 
 #
-# Set to false to disable the Excel export using the preview dialog.
-# This will not prevent anyone from calling the dialog manually, but
-# the export plugin will not be included by default.
-#
+# Set to false to disable the Excel export using the preview dialog. This
+# will not prevent anyone from calling the dialog's methods manually,
+# but the export plugin will not be visible by default.
 org.jfree.report.modules.gui.xls.Enable=true
 
 #
