--- a/jfreereport/source/org/jfree/report/modules/misc/tablemodel/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/tablemodel/configuration.properties
@@ -1,6 +1,8 @@
 #
 # The tablemodel factory mode for the ResultSetTableModelFactory
-# if set to "simple" the factory will always return a DefaultTableModel
-org.jfree.report.modules.misc.tablemodel.TableFactoryMode=default
+# if set to "simple" the factory will always return a DefaultTableModel.
+#
+# Valid values are "auto" or "simple".
+org.jfree.report.modules.misc.tablemodel.TableFactoryMode=auto
 
 
