--- a/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
@@ -6,7 +6,8 @@
 
 #
 # The default font-encoding for the OutputTarget.
-# Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
+# Can be changed with PDFOutputTarget.setFontEncoding for the specific
+# instance if needed.
 #org.jfree.report.modules.output.pageable.pdf.Encoding=Identity-H
 
 #
@@ -17,7 +18,7 @@
 
 #
 # The author string of the document.
-#org.jfree.report.modules.output.pageable.pdf.Author=user
+#org.jfree.report.modules.output.pageable.pdf.Author=
 
 #
 # The title of the document.
@@ -28,51 +29,67 @@
 ###########################################################################################
 
 #
-# Should the PDF Security setting allow copying of the document's contents by default
+# Defines, whether the PDF Security setting allows copying of the document's
+# contents by default
 org.jfree.report.modules.output.pageable.pdf.AllowCopy=false
 
 #
-# Should the PDF Security setting allow printing of the document's contents by default
+# Defines, whether the PDF Security setting allows printing of the document's
+# contents by default
 org.jfree.report.modules.output.pageable.pdf.AllowPrinting=false
 
 #
-# Should the PDF Security setting allow modifying of the document by default
+# Defines, whether the PDF Security setting allows modifying of the document
+# by default
 org.jfree.report.modules.output.pageable.pdf.AllowModifyContents=false
 
 #
-# Should the PDF Security setting allow document annotations by default
+# Defines, whether the PDF Security setting allows document annotations by
+# default
 org.jfree.report.modules.output.pageable.pdf.AllowModifyAnnotations=false
 
 #
-# Should the PDF Security setting allow the fill-in of document forms (inputfields etc).
+# Defines, whether the PDF Security setting allows the fill-in of document
+# forms (inputfields etc).
 org.jfree.report.modules.output.pageable.pdf.AllowFillIn=false
 
 #
-# Should the PDF Security setting allow access for screenreaders by default
+# Defines, whether the PDF Security setting allows access for screenreaders
+# by default. Although this could make it easier to grab the contents your
+# PDF document, enabling this property will allow blind people to access your
+# content. It is usually a good idea to always enable this property.
 org.jfree.report.modules.output.pageable.pdf.AllowScreenReaders=false
 
 #
-# Should the PDF Security setting allow re(assembly) of the document by default
+# Defines, whether the PDF Security setting allows reassmebly of the document
+# by default.
 org.jfree.report.modules.output.pageable.pdf.AllowAssembly=false
 
 #
-# Should the PDF Security setting allow low quality printing of the document's contents by default
+# Defines, whether the PDF Security setting allows low quality printing of the
+# document's contents by default.
 org.jfree.report.modules.output.pageable.pdf.AllowDegradedPrinting=false
 
 #
-# Should the PDF file be encrypted by default? Set to "none" "40bit" "128bit"
+# Defines whether the PDF file should be encrypted by default. Set this to
+# "none" "40bit" or "128bit". Access restrictions have no effect if the document
+# is not encrypted, and not all security settings are active on 40-Bit encryption.
 org.jfree.report.modules.output.pageable.pdf.Encryption=none
 
 ####################################################################################
-# Warning: Specifying passwords in the property file can introduce a security risk.
-# Do not use these settings on the client side or in unprotected (world-readable) server environments.
-# In these cases use other means of defining the password.
+# Warning: Specifying passwords in the property file can introduce a security
+# risk. Do not use these settings on the client side or in unprotected
+# (world-readable) server environments. In these cases use other means of
+# defining the password.
 
 #
 # The default user password for the document.
+# Users are able to access the document within the defined security restrictions.
 #org.jfree.report.modules.output.pageable.pdf.UserPassword=
 
 #
 # The default owner password for the document.
+# The owner has all perfmissions on the document and will be able to
+# change the security settings.
 #org.jfree.report.modules.output.pageable.pdf.OwnerPassword=
 
