--- a/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
@@ -3,8 +3,8 @@
 
 #
 # This property defaults to the current platform encoding, but should
-# be adjusted when using one of the printer specifc command sets.
-#
+# be adjusted when using one of the printer specifc command sets,
+# as these command sets don't support all encodings.
 #org.jfree.report.modules.output.pageable.plaintext.Encoding=Cp1252
 
 #
