--- a/jfreereport/source/org/jfree/report/modules/output/table/csv/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/csv/configuration.properties
@@ -2,4 +2,6 @@
 # CSV Table target specific configuration properties ...
 #
 
+#
+# Defines the default separator, that should be used for the output.
 #org.jfree.report.modules.output.table.csv.Separator=,
