--- a/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/xls/configuration.properties
@@ -4,8 +4,9 @@
 
 #
 # Whether to apply the Cell-DataFormat strings to excel cells.
-# If disabled, all content is inserted as text. So you won't be able to perform
-# calculations, but it is more safe in case of invalid cell formats.
+# If disabled, all content is inserted as text. This way you won't be able to
+# perform calculations on the generated content, but it is more safe in case of
+# invalid cell formats.
 org.jfree.report.modules.output.table.xls.EnhancedDataFormat=true
 
 # Defines the Paper that should be used in the excel print setup.
