--- a/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/configuration.properties
@@ -50,7 +50,7 @@ org.jfree.report.modules.gui.base.SwingDialogTranslation=false
 org.jfree.report.modules.gui.base.EncodingsAvailable=all
 
 #
-# The name of the properties file used to define the available encodings.
+# Defines the name of the properties file used to define the available encodings.
 # The property points to a resources in the classpath, not to a real file!
 org.jfree.report.modules.gui.base.EncodingsFile=/org/jfree/report/modules/gui/base/components/jfreereport-encodings.properties
 
