--- a/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
@@ -3,10 +3,9 @@
 #
 
 #
-# Set to false to disable the Printing export using the preview dialog.
-# This will not prevent anyone from calling the dialog manually, but
-# the export plugin will not be included by default.
-#
+# # Set to false to disable the Printing export using the preview dialog. This
+# will not prevent anyone from calling the dialog's methods manually,
+# but the export plugin will not be visible by default.
 org.jfree.report.modules.gui.print.Enable=true
 
 #
@@ -17,10 +16,9 @@ org.jfree.report.modules.gui.print.Enable=true
 org.jfree.report.modules.gui.print.Order=70
 
 #
-# Set to false to disable the PageSetup dialog using the preview dialog.
-# This will not prevent anyone from calling the dialog manually, but
-# the export plugin will not be included by default.
-#
+# Set to false to disable the pagesetup dialog using the preview dialog. This
+# will not prevent anyone from calling the dialog's methods manually,
+# but the export plugin will not be visible by default.
 org.jfree.report.modules.gui.print.pagesetup.Enable=true
 
 #
