--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -4,22 +4,22 @@
 #
 # Defines the document encoding. If undefined, it defaults to the
 # platforms default encoding.
-#org.jfree.report.modules.ouput.table.html.Encoding=UTF-8
+#org.jfree.report.modules.output.table.html.Encoding=UTF-8
 
 #
 # Defines whether to define a body fragment only. This removes
 # the header and body tags and makes it easy to include the generated
 # content in own pages.
-#org.jfree.report.modules.ouput.table.html.BodyFragment=UTF-8
+#org.jfree.report.modules.output.table.html.BodyFragment=UTF-8
 
 #
 # Defines whether to generate XHTML1.0 or HTML4.0 content.
-#org.jfree.report.modules.ouput.table.html.GenerateXHTML=false
+#org.jfree.report.modules.output.table.html.GenerateXHTML=false
 
 #
 # Defines the default title for generated HTML documents.
-#org.jfree.report.modules.ouput.table.html.Title=
+#org.jfree.report.modules.output.table.html.Title=
 
 #
 # Defines a author for generated HTML documents.
-#org.jfree.report.modules.ouput.table.html.Author=
+#org.jfree.report.modules.output.table.html.Author=
