--- a/jfreereport/source/org/jfree/report/modules/parser/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/base/configuration.properties
@@ -1,5 +1,5 @@
 #
-# Should the parser try to validate the report definition?
-# validation is done against the local copy of the DTD.
+# Defines, whether the parser should try to validate against
+# a possibly given DTD.
 org.jfree.report.modules.parser.base.Validate=true
 
