ConfigEditor; BugFix: Blocked thread when abort repagination BugFix: HtmlImageCell invalid BugFix: &apos; entity in xml parser invalid Performance tuning - hashCode and immutable Objects

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -41,6 +41,11 @@ org.jfree.report.LogTarget=org.jfree.report.util.SystemOutLogTarget
 org.jfree.report.PrintOperationComment=false
 
 #
+# Defines, whether the report builder should be paranoid and check every
+# value for serializability. This defaults to false for performance reasons.
+org.jfree.report.ReportBuilderHint.ParanoidChecks=false
+
+#
 # Defines, whether the datarow prints warning on invalid columns. Requests to
 # invalid columns are non fatal, but these messages give usefull hints on invalid
 # report definitions.
