Fixes of the next release ... package manager uses subsystems now to manage the module initialization in more intelligent way. FontRegistering works onInit as expected (caching).

--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -78,7 +78,7 @@ org.jfree.report.modules.gui.xls.Module=org.jfree.report.modules.gui.xls.ExcelEx
 org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
 org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
-org.jfree.report.modules.misc.logging.base.Module=org.jfree.report.modules.misc.logging.base.DefaultLogModule
+org.jfree.report.modules.misc.logging.base.Module=org.jfree.report.DefaultLogModule
 org.jfree.report.modules.misc.configstore.base.Module=org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
 org.jfree.report.modules.misc.configstore.filesystem.Module=org.jfree.report.modules.misc.configstore.filesystem.FileConfigStoreModule
 
