--- a/jfreereport/source/org/jfree/report/modules/output/pageable/graphics/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/graphics/module.properties
@@ -16,3 +16,8 @@ depends:
   version.major: 0
   version.minor: 84
 
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
+
