--- a/jfreereport/source/org/jfree/report/modules/output/support/itext/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/support/itext/module.properties
@@ -13,11 +13,13 @@ module-info:
 #
 # Requires the external library "itext-1.00"
 #
-
 depends:
   module: org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
   version.major: 0
   version.minor: 84
+    
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
 
-#optional:
-#  module: ...
