--- a/jfreereport/source/org/jfree/report/modules/parser/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/base/module.properties
@@ -9,4 +9,10 @@ module-info:
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
+  subsystem: xml-parser
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
 
