--- a/jfreereport/source/org/jfree/report/modules/misc/beanshell/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/beanshell/module.properties
@@ -12,3 +12,8 @@ module-info:
   version.minor: 84
   version.patchlevel: 0
 
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
+
