--- a/jfreereport/source/org/jfree/report/modules/misc/configstore/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/configstore/base/module.properties
@@ -14,4 +14,10 @@ module-info:
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
+  subsystem: configstore
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
 
