--- a/jfreereport/source/org/jfree/report/modules/misc/configstore/filesystem/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/configstore/filesystem/module.properties
@@ -16,8 +16,15 @@ module-info:
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
+  subsystem: configstore
 
 depends:
   module: org.jfree.report.modules.misc.configstore.base.ConfigStoreBaseModule
   version.major: 0
   version.minor: 84
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
+
