--- a/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/referencedoc/module.properties
@@ -25,5 +25,10 @@ depends:
   version.major: 0
   version.minor: 84
 
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
+
 
 
