--- a/jfreereport/source/org/jfree/report/modules/output/csv/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/csv/module.properties
@@ -10,3 +10,8 @@ module-info:
   version.minor: 84
   version.patchlevel: 0
 
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
+
