--- a/jfreereport/source/org/jfree/report/modules/output/pageable/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/base/module.properties
@@ -9,3 +9,9 @@ module-info:
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
+
