--- a/jfreereport/source/org/jfree/report/modules/parser/simple/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/parser/simple/module.properties
@@ -9,8 +9,15 @@ module-info:
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
+  subsystem: xml-parser
 
 depends:
   module: org.jfree.report.modules.parser.base.ParserBaseModule
   version.major: 0
   version.minor: 84
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 84
+
