Image and shape content alignment works now, html image ref bug fixed .

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -11,8 +11,8 @@ jfreereport.version=0.8.4-pre
 # This defines the compiler settings. Optimizing would remove
 # the debug information, so we dont do that. This may be selfish,
 # but these settings guarantee better bug-reports :)
-build.debug=true
-build.optimize=false
+build.debug=false
+build.optimize=true
 build.deprecation=true
 
 #
