--- a/jfreereport/source/org/jfree/report/coremodule.properties
+++ b/jfreereport/source/org/jfree/report/coremodule.properties
@@ -6,7 +6,9 @@
 module-info:
   name: core-module
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: The core files of JFreeReport.
+  description: The core files of JFreeReport. The module collects all
+               classes needed to provide the basic reporting capabilities
+               of JFreeReport.  
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
