--- a/jfreereport/source/org/jfree/report/logmodule.properties
+++ b/jfreereport/source/org/jfree/report/logmodule.properties
@@ -5,7 +5,8 @@
 module-info:
   name: base-logging-module
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: Initialializer to configure the log system.
+  description: Initialializer to configure the log system and to provide
+               a facility for logging to the System.out stream. 
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
