--- a/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/base/module.properties
@@ -5,7 +5,7 @@
 module-info:
   name: preview-base-classes
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: Defines the default preview frame and provides base
+  description: Defines the default preview components and provides base
                classes for the pluggable export module dialogs.
   version.major: 0
   version.minor: 84
