--- a/jfreereport/source/org/jfree/report/modules/gui/config/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/config/module.properties
@@ -1,7 +1,7 @@
 module-info:
   name: report-config-gui
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: A GUI for the report configuration setup
+  description: A GUI for the report configuration setup.
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
