--- a/jfreereport/source/org/jfree/report/modules/gui/pdf/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/pdf/module.properties
@@ -1,11 +1,11 @@
 #
-# Report converter GUI for the report writer
+# A dialog component for the PDF export.
 #
 
 module-info:
   name: pdf-export-gui
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: A dialog component for the PDF table export.
+  description: A dialog component for the PDF pageable export.
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
