--- a/jfreereport/source/org/jfree/report/modules/gui/plaintext/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/plaintext/module.properties
@@ -1,11 +1,11 @@
 #
-# A dialog component for the PDF table export.
+# A dialog component for the plain text export.
 #
 
 module-info:
   name: plaintext-export-gui
   producer: The JFreeReport project - www.jfree.org/jfreereport
-  description: A dialog component for the PDF table export.
+  description: A dialog component for the plain text export.
   version.major: 0
   version.minor: 84
   version.patchlevel: 0
