--- a/jfreereport/source/org/jfree/report/modules/gui/converter/parser/translations.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/converter/parser/translations.properties
@@ -1,8 +1,10 @@
 #
 # Translation mappings
 #
-# format: context:attribute:oldValue=newValue
-#
+# format: context@attribute@oldValue=newValue
+# 
+# Context is a list of tagnames separated by a dot.
+# The context is build according to the contextmap.properties file
 
 #
 # Map the old function names to the new ones ...
