--- a/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
@@ -25,3 +25,8 @@ org.jfree.report.modules.gui.print.pagesetup.Enable=true
 # Defines the order of the page setup dialog.
 #
 org.jfree.report.modules.gui.print.pagesetup.Order=60
+
+#
+# Defines a jobname for the report. If undefined, the java default jobname
+# will be used; the jobname can also be defined in the local report configuration.
+#org.jfree.report.modules.gui.print.JobName=JFreeReport Printing
