--- a/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
@@ -24,6 +24,13 @@
 # The title of the document.
 #org.jfree.report.modules.output.pageable.pdf.Title=
 
+#
+# The PDF Version that should be created. Valid values are "1.2", "1.3",
+# "1.4" or "1.5"
+#org.jfree.report.modules.output.pageable.pdf.OwnerPassword=
+
+
+
 ###########################################################################################
 ### PDF Security flags are only used with security enabled and a password set #############
 ###########################################################################################
