New build script to support module structure ...

--- a/jfreereport-ext/ant/build.properties
+++ b/jfreereport-ext/ant/build.properties
@@ -2,10 +2,31 @@
 # Defines the JFreeReport base project directory, this is the directory, where the file 
 # jfreereport-xxx.jar and jfreereport-xxx-demo.jar are located.
 #
-jfreereport-dir=../../jfreereport
+# The directory specified here is relative to the root directory of the project
+jfreereport-dir=../jfreereport
 
 #
 # Optional: Define the library path, where the required jar files are located.
-# By default, the libary directory is contained in the JFreeReport distribution directory.
+# By default, the library directory is contained in the JFreeReport distribution
+# directory.
+jfreereport-libdir=${jfreereport-dir}/lib
+
 #
-#jfreereport-libdir=${jfreereport-dir}/lib
+# Build setup
+#
+ext.libdir=lib
+
+#
+# where to copy the created jar files
+ext.targetdir=
+
+
+###########################################################
+#
+#  Used libraries ...
+junit-jar-file=junit.jar
+log4j-jar-file=log4j-1.2.3.jar
+jlfgr-archive-file=jlfgr-1_0.zip
+servlet-jar-file=servlet.jar
+
+
