--- a/jfreereport-ext/webapp/WEB-INF/classes/jfreereport.properties
+++ b/jfreereport-ext/webapp/WEB-INF/classes/jfreereport.properties
@@ -1,157 +1,5 @@
+###
+# Edit this file to configure JFreeReport
 #
-# see source of class com.jrefinery.report.util.ReportConfiguration for keys
-# Additional keys:
-#
-
-#
-# Global Configuration: These keys affect the whole VM and cannot be changed once
-# they are configured unless the VM is restarted.
-
-#
-# The minimum loglevel that is logged
-com.jrefinery.report.LogLevel=Debug
-
-#
-# Enable aliasing for Graphics2D. This may result is textlayout errors.
-# If your text is not correctly aligned, disable this property.
-#
-com.jrefinery.report.targets.G2OutputTarget.useAliasing=true
-
-#
-# This is a override setting. Some Graphics2D implementations have problems
-# with the font positioning. I don't know a way to resolve that bug, try
-# setting this property to "true" to resolve wrong/buggy string draw results.
-#
-com.jrefinery.report.targets.G2OutputTarget.isBuggyFRC=false
-
-#
-# Where to log. Give a classname of a  valid LogTarget implementation.
-#com.jrefinery.report.LogTarget=com.jrefinery.report.util.SystemOutLogTarget
-
-#
-# AutoInit the PDFTarget? Searches and registers all ttf-fonts on the system
-com.jrefinery.report.targets.PDFOutputTarget.AUTOINIT=false
-
-#
-# A URL to the JFreeReport-DTD if not specified in the Document
-com.jrefinery.report.dtd=http://jfreereport.sourceforge.net/report.dtd
-
-#
-# Should the logical page add comments to the generated PhysicalOperations? This is
-# for debugging only.
-com.jrefinery.report.PrintOperationComment=false
-
-#
-# Should the datarow print warning on invalid columns? Invalid column requests always
-# return null, if set to true, an additional logging entry is added
-com.jrefinery.report.WarnInvalidColumns=true
-
-#
-# The tablemodel factory mode for the ResultSetTableModelFactory
-# if set to "simple" the factory will always return a DefaultTableModel
-#com.jrefinery.report.TableFactoryMode=simple
-
-#
-# Should the debugging system be disabled by default. This option will surpress all
-# output, no single line of debug information will be printed. If you want to remove
-# System.out-debugging on the server side, try to switch to a Log4J-LogTarget instead.
-com.jrefinery.report.NoDefaultDebug=false
-
-#
-# Local configuration keys:
-# The following keys can be redefined for all report-instances.
-
-#
-# Defines a preferred size for the preview frame. Both width and height must be set,
-# proportional values are allowed (100%, 90% etc). They have the same syntax as the
-# proportional values in the xml definition.
-#
-# None of the values is defined by default
-#com.jrefinery.report.preview.PreferredWidth=640
-#com.jrefinery.report.preview.PreferredHeight=480
-
-#
-# Defines the maximum width for the preview frame. If the width is defined, a component
-# listener will be used to enforce the defined width.
-# The value is not defined by default
-#com.jrefinery.report.preview.MaximumWidth=800
-
-#
-# Defines the maximum height for the preview frame. If the height is defined, a component
-# listener will be used to enforce that value.
-# The value is not defined by default
-#com.jrefinery.report.preview.MaximumHeight=600
-
-#
-# The PDFTarget can be configured using these properties. This will create a default configuration
-# which can be altered by the programm using the usual operations.
-#
-
-#
-# The default font-encoding for the OutputTarget.
-# Can be changed with PDFOutputTarget.setFontEncoding for the specific instance if needed.
-#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encoding=iso-8859-1
-
-#
-# Defines whether to embed fonts in the generated PDF. This will result in larger PDF
-# files, but makes sure that all characters are displayed properly. 
-#
-#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.EmbedFonts=true
-
-#
-# The author string of the document.
-#com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Author=user
-
-###########################################################################################
-### PDF Security flags are only used with security enabled and a password set #############
-###########################################################################################
-
-#
-# Should the PDF Security setting allow copying of the document's contents by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowCopy=false
-
-#
-# Should the PDF Security setting allow printing of the document's contents by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowPrinting=false
-
-#
-# Should the PDF Security setting allow modifying of the document by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyContents=false
-
-#
-# Should the PDF Security setting allow document annotations by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowModifyAnnotations=false
-
-#
-# Should the PDF Security setting allow the fill-in of document forms (inputfields etc).
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowFillIn=false
-
-#
-# Should the PDF Security setting allow access for screenreaders by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowScreenReaders=false
-
-#
-# Should the PDF Security setting allow re(assembly) of the document by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowAssembly=false
-
-#
-# Should the PDF Security setting allow low quality printing of the document's contents by default
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.AllowDegradedPrinting=false
-
-#
-# Should the PDF file be encrypted by default? Set to "none" "40bit" "128bit"
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.Encryption=none
-
-#
-# Warning: Specifying passwords in the property file can introduce a security risk.
-# Do not use these settings on the client side or in unprotected (world-readable) server environments.
-# In these cases use other means of defining the password.
-
-#
-# The default user password for the document.
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.userpassword=
-
-#
-# The default owner password for the document.
-com.jrefinery.report.targets.pageable.output.PDFOutputTarget.default.ownerpassword=
+# See the base package for details on the available report configuration keys.
 
