ConfigEditor prints helptexts now. The last thing to do is the saving (print comments in the file ...)

--- a/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/pdf/configuration.properties
@@ -27,7 +27,7 @@
 #
 # The PDF Version that should be created. Valid values are "1.2", "1.3",
 # "1.4" or "1.5"
-#org.jfree.report.modules.output.pageable.pdf.OwnerPassword=
+#org.jfree.report.modules.output.pageable.pdf.Version=1.4
 
 
 
