--- a/jfreereport/source/org/jfree/report/modules/output/support/itext/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/support/itext/module.properties
@@ -3,7 +3,7 @@
 #
 
 module-info:
-  name: itext-basefont-export
+  name: itext-basefont-support
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: iText base font library support.
   version.major: 0
