--- a/jfreereport/source/org/jfree/report/modules/output/support/itext/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/support/itext/configuration.properties
@@ -14,7 +14,7 @@
 #
 # Valid values are "onInit", "never" or "lazy".
 #
-org.jfree.report.modules.output.support.itext.AutoInit=onInit
+org.jfree.report.modules.output.support.itext.AutoInit=lazy
 
 #
 # Defines the encoding to be used during the font initialisation. If not
