Element Color function and ant files

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -73,6 +73,7 @@ module-output-csv-file=${targetdir}${jfreereport.name}-${jfreereport.version}-ou
 module-output-xml-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-xml.jar
 
 module-output-support-itext-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-support-itext.jar
+module-output-support-pagelayout-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-support-pagelayout.jar
 
 module-output-pageable-base-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-pageable-base.jar
 module-output-pageable-graphics-file=${targetdir}${jfreereport.name}-${jfreereport.version}-output-pageable-graphics.jar
