--- a/jfreereport/source/org/jfree/report/modules/output/table/base/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/base/module.properties
@@ -8,10 +8,16 @@ module-info:
   description: Base classes for table style export targets.
   version.major: 0
   version.minor: 84
-  version.patchlevel: 0
+  version.patchlevel: 2
 
 depends:
   module: org.jfree.report.JFreeReportCoreModule
   version.major: 0
   version.minor: 84
+
+depends:
+  module: org.jfree.report.modules.output.support.pagelayout.PageLayoutModule
+  version.major: 0
+  version.minor: 84
+  version.patchlevel: 2
 
