--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -86,6 +86,7 @@ org.jfree.report.modules.misc.configstore.filesystem.Module=org.jfree.report.mod
 org.jfree.report.modules.output.csv.Module=org.jfree.report.modules.output.csv.CSVModule
 org.jfree.report.modules.output.xml.Module=org.jfree.report.modules.output.xml.XMLModule
 org.jfree.report.modules.output.support.itext.Module=org.jfree.report.modules.output.support.itext.BaseFontModule
+org.jfree.report.modules.output.support.pagelayout.Module=org.jfree.report.modules.output.support.pagelayout.PageLayoutModule
 
 # pageable output modules
 org.jfree.report.modules.output.pageable.base.Module=org.jfree.report.modules.output.pageable.base.PageableBaseModule
